# cortex-xor

./: Cargo.toml  LICENSE  README.md  comp.txt  newmlstm.json
bpe/: bpe.rs  main.rs
model cortex/: cortex_tokenizer.json
pkloss/: bug-luongv1.rs  bug-luongv2.rs  deepseekdual.txt
src/: block.rs  bug-luong.rs  cortexthread.rs  gate_controller.rs  lib.rs  main.rs  min_gru.rs  min_lstm.rs  min_lstm_threaded.rs  min_vs_lstm.rs  mlstm.rs  mlstm_minlstm_chat.rs  mlstmnew.rs  model.rs  msltmchat.rs  multi.rs  slstm.rs  slstmchat.rs  slstmchat2.rs  test_min_threaded.rs  test_mingru_stability.rs  test_slstm_mlstm_stability.rs  test_slstm_param_sweep.rs  tinystory2v.rs
src/block/: min_gru.rs  min_lstm.rs  min_lstm_threaded.rs  mlstm.rs  slstm.rs
src/model/: cortexslstm.rs  cortexthread.rs  mlstm_minlstm_chat.rs  mlstmnew.rs  multi.rs  slstmchat.rs  tinystory.rs
src/not/: mlstm.rs  mlstmnew.rs  msltmchat.rs  xlstmchat.rs
src/tests/: test_minlstm_param_sweep.rs  test_minlstm_threaded.rs  test_mlstm_param_sweep.rs  test_mlstm_plus.rs
src/tinystory/v3 3.6loss/: tinystory3v.rs
