[package]
name = "xlstm-rs"
version = "0.1.0"
edition = "2024"
description = "Laurelia: xLSTM Chatbot implementation in Rust using Candle"


[dependencies]
candle-core = { version = "0.8.2", features = [] }
candle-nn = "0.8.2"
candle-transformers = "0.8.2"
safetensors = "0.4.1"
anyhow = "1.0"
chrono = "0.4.42"
csv = "1.3.1"
env_logger = "0.11.8"
log = "0.4.28"
ndarray = "0.16.1"
num-traits = "0.2.19"
plotters = "0.3.7"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
tokenizers = "0.21.0"

[lib]
name = "xlstm"
path = "src/lib.rs"

[[bin]]
name = "multi"
path = "src/model/multi.rs"

[[bin]]
name = "mlstmchat"
path = "src/model/msltmchat.rs"

[[bin]]
name = "mlstmnew"
path = "src/model/mlstmnew.rs"

[[bin]]
name = "slstmchat"
path = "src/model/slstmchat.rs"

[[bin]]
name = "2slstmchat"
path = "src/model/slstmchat2.rs"

[[bin]]
name = "cortexslstm"
path = "src/model/cortexslstm.rs"

[[bin]]
name = "cortexthread"
path = "src/model/cortexthread.rs"


[[bin]]
name = "xlstmchat"
path = "src/model/xlstmchat.rs"

[[bin]]
name = "tinystory"
path = "src/model/tinystory.rs"

[[bin]]
name = "tinystory2v"
path = "src/model/tinystory2v.rs"

[[bin]]
name = "tinystory3v"
path = "src/model/tinystory3v.rs"

[[bin]]
name = "mlstm_minlstm_chat"
path = "src/model/mlstm_minlstm_chat.rs"

# Tests

[[bin]]
name = "test_mingru_stability"
path = "src/tests/test_mingru_stability.rs"

[[bin]]
name = "test_slstm_mlstm_stability"
path = "src/tests/test_slstm_mlstm_stability.rs"

[[bin]]
name = "test_minlstm_param_sweep"
path = "src/tests/test_minlstm_param_sweep.rs"

[[bin]]
name = "test_minlstm_threaded"
path = "src/tests/test_minlstm_threaded.rs"

[[bin]]
name = "test_mlstm_param_sweep"
path = "src/tests/test_mlstm_param_sweep.rs"

[[bin]]
name = "test_mlstm_plus"
path = "src/tests/test_mlstm_plus.rs"

[[bin]]
name = "test_slstm_param_sweep"
path = "src/tests/test_slstm_param_sweep.rs"

[[bin]]
name = "bug-luong"
path = "src/tests/bug-luong.rs"

[[bin]]
name = "min_vs_lstm"
path = "src/tests/min_vs_lstm.rs"

[[bin]]
name = "test_min_threaded"
path = "src/tests/test_min_threaded.rs"

[profile.release]
#opt-level = 3
#lto = "fat"
#codegen-units = 1
